fixed padding on mobile home page
we should require that they do this on a computer though, because
PeerStudio doesn’t work on phones

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -26,6 +26,10 @@ h3
 	font-size: 1.00em !important;
 }
 
+#maintext header .byline {
+	padding: 0em 1em;
+}
+
 .container
 {
 	padding: 0px 15px;
